Tue Dec 28 19:45:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* bin/make_release:

	  Added .png to te list of files that needs to be omitted from
	  LF->CRLF conversions. Thanks to Johnny for pointing this out.

Sat Dec 25 20:58:12 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* bin/make_release:

          Generated textual version of TAO-INSTALL.html and
	  CIAO-INSTALL.html within the distribution.

Wed Dec 22 12:47:19 2004  Steve Huston  <shuston@riverace.com>

	* ACE-INSTALL.html: Revised the platforms and support section to
	  reflect the need for actively maintained platforms to be represented
	  on the build scoreboard. Old, unmaintained platforms are subject to
	  deprecation and removal.

Wed Dec 22 11:35:07 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* configure.ac:
	* m4/ace.m4:
	* m4/compiler.m4:
	* m4/platform.m4:

	  Reverted change described in "Sun Dec 19 14:23:53 2004 ..." that
	  changed "$host" to "$target".  The latter is only used by tool
	  chains (compilers, linkers, etc) and is not needed in ACE's
	  case.  To enable cross-compilation support, users should set the
	  host platform via the "--host" configure script option, as
	  described in the "./configure --help" output.

Wed Dec 22 11:17:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/show_unused_macros.pl:

          This script will find macros in specified config files that
          are not referenced in other config files, but are referenced
          in the rest of the ace source files.  The macros that it shows
          are candidates for removal from ace.

Wed Dec 22 08:00:33 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/ftclientorb.mpb:
        * bin/MakeProjectCreator/config/ftserverorb.mpb:

          These both require interceptors to function properly.

        * bin/tao_other_tests.lst:

          Added !STATIC to the following:

            TAO/performance-tests/Protocols/run_test.pl